fixed z-index on buttons

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-property-editor.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-property-editor.less
@@ -26,6 +26,10 @@
     z-index: 1;
 }
 
+.umb-property-editor__dropdown-toggling.-active {
+    z-index: 10;
+}
+
 .umb-property-editor__dropdown-toggle {
     height: 40px;
     display: flex;
